--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,8 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
+    implementation 'mysql:mysql-connector-java:8.0.33'
     implementation 'org.jetbrains.kotlin:kotlin-reflect'
     implementation 'com.google.firebase:firebase-admin:9.1.1'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
