--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
     implementation 'mysql:mysql-connector-java:8.0.33'
+    implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.15.2'
     implementation 'org.jetbrains.kotlin:kotlin-reflect'
     implementation 'com.google.firebase:firebase-admin:9.1.1'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
