--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,8 @@ jobs:
           java-version: '17'
       - name: setup gradle
         uses: gradle/gradle-build-action@v2
+      - name: add execute permission for gradlew
+        run: chmod +x gradlew
       - name: run build gradle wrapper
         uses: ./gradlew build
       - name: upload build artifacts
