[github action] gradlewに実行権限を追加2

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
       - name: setup gradle
         uses: gradle/gradle-build-action@v2
       - name: add execute permission for gradlew
-        run: chmod +x gradlew
+        run: chmod +x ./gradlew
       - name: run build gradle wrapper
         uses: ./gradlew build
       - name: upload build artifacts
