--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,8 @@
 name: Java CI
 
-on: [push]
+on:
+  push:
+    branches: ["main"]
 
 jobs:
   build:
@@ -18,7 +20,7 @@ jobs:
       - name: add execute permission for gradlew
         run: chmod +x ./gradlew
       - name: run build gradle wrapper
-        uses: ./gradlew build
+        run: ./gradlew build
       - name: upload build artifacts
         uses: actions/upload-artifact@v2
         with:
