--- a/build.gradle
+++ b/build.gradle
@@ -42,3 +42,7 @@ tasks.withType(KotlinCompile) {
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+bootJar {
+    archiveFileName = "AR-MysteryGame-Backend.jar"
+}
