mariadbに切り替え

--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
-    implementation 'mysql:mysql-connector-java:8.0.33'
+    //implementation 'mysql:mysql-connector-java:8.0.33'
+    implementation 'org.mariadb.jdbc:mariadb-java-client:2.2.0'
     implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.15.2'
     implementation 'org.jetbrains.kotlin:kotlin-reflect'
     implementation 'com.google.firebase:firebase-admin:9.1.1'
